# general-rag

./: .env.example  .gitignore  admin.html  demo.html  dev_server.py  login.html  pyproject.toml
app/api/: deps.py  error_handlers.py  frontend.py  import_app.py  query_app.py
app/api/import_/: __init__.py
app/api/query/: __init__.py
app/api/schemas/: __init__.py  auth.py  business_line.py  chat.py  common.py  company.py  document.py  knowledge_base.py  model_config.py  playground.py
app/infra/config/: providers.py
app/infra/llm/: providers.py
app/infra/object_storage/: minio_gateway.py
app/infra/persistence/: __init__.py  admin_repositories.py  base_repository.py  bootstrap.py  history_repository.py  models.py  mysql.py
app/infra/vectorstore/: milvus_gateway.py
app/process/common/: __init__.py  node_decorator.py
app/process/import_/: task_store.py
app/rag/import_/: __init__.py  config.py  document_import_service.py  embedding_service.py  markdown_asset_service.py  pdf_parser_service.py  subject_backfill_service.py  text_utils.py  vector_writer.py
app/rag/query/: __init__.py  answer_service.py  config.py  history_service.py  retrieval_service.py  runtime_service.py
app/resources/frontend/: admin.html  demo.html  login.html
app/shared/clients/: __init__.py  milvus_utils.py  minio_utils.py  mongo_history_utils.py
app/shared/config/: __init__.py  bailian_mcp_config.py  common.py  (+3 more)
doc/: 1. 功能需求文档.md  2. 接口文档.md  3. 数据库和存储设计.md  4. 原型图.md  5. FastAPI框架与LangGraph设计.md  6. 文档管理与聊天记录接口流程.md
static/: chat-widget.js  prototype.css  prototype.js
(+35 files in other folders)
