[project]
name = "my-rag-prj"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.136.3",
    "grandalf==0.8",
    "langchain==1.3.2",
    "langchain-community==0.4.2",
    "langchain-openai==1.2.2",
    "langgraph==1.2.2",
    "loguru==0.7.3",
    "magic-pdf==1.3.12",
    "mineru-kie-sdk==0.1.1",
    "minio==7.2.20",
    "modelscope==1.37.1",
    "numpy==1.26.4",
    "pandas==3.0.3",
    "pymilvus[model]==3.0.0",
    "pymilvus-model==0.3.2",
    "pymongo==4.17.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.29",
    "regex==2026.5.9",
    "torch==2.2.2",
    "torchvision==0.17.2",
    "torchaudio==2.2.2",
    "uvicorn==0.48.0",
    "datasets==4.8.5",
    "openai-agents==0.4.2",
    "requests==2.34.2",
    "langchain-mcp-adapters==0.2.2",
    "dashscope==1.25.19",
    "transformers==4.51.3",
    "flagembedding==1.3.5",
    "sqlalchemy==2.0.50",
    "pymysql==1.1.2",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]
constraint-dependencies = [
    "onnxruntime==1.23.2",
]
